Style: flex align column to prevent centering
* Some pages content was pushed down/centered due to flex direction.
Looked odd

--- a/redux-shopping-cart/src/stylesheet/index.css
+++ b/redux-shopping-cart/src/stylesheet/index.css
@@ -10,7 +10,8 @@
 #root {
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   flex-wrap: wrap;
   background-color: rgb(241 245 249 / 50%);
 }
